<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="154dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingLeft="10dp">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:autoText="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center|fill_horizontal"
                    android:text="@string/APsurnameLabel" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:autoText="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center|fill_horizontal"
                    android:text="@string/APnameLabel"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:autoText="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center|fill_horizontal"
                    android:text="@string/APthirdNameLabel" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:autoText="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center|fill_horizontal"
                    android:text="@string/APphoneNumbe" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:autoText="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center|fill_horizontal"
                    android:text="@string/APemailLabel" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:autoText="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center|fill_horizontal"
                    android:text="@string/APpasswordLabel"
                    tools:text="@string/passwordLabel" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:autoText="false"
                    android:clickable="false"
                    android:contentDescription="@string/password2LabelHint"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center|fill_horizontal"
                    android:text="@string/APpassword2Label"
                    tools:text="@string/password2Label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:paddingLeft="2dp">

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:height="30dp"
                    android:ems="10"
                    android:hint="@string/APsurnameLabelHint"
                    android:inputType="textPersonName"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:height="25dp"
                    android:ems="10"
                    android:hint="@string/APnameLabelHint"
                    android:inputType="textPersonName"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/thirdname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:height="25dp"
                    android:ems="10"
                    android:hint="@string/APthirdNameLabelHint"
                    android:inputType="textPersonName"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:height="25dp"
                    android:ems="10"
                    android:hint="@string/APphoneNumberHint"
                    android:inputType="phone"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:height="25dp"
                    android:ems="10"
                    android:hint="@string/APemailLabelHint"
                    android:inputType="textEmailAddress"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:height="25dp"
                    android:ems="10"
                    android:hint="@string/APpasswordLabelHint"
                    android:inputType="textPassword"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:height="25dp"
                    android:ems="10"
                    android:hint="@string/APpassword2LabelHint"
                    android:inputType="textPassword"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/button11"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="36dp"
                android:onClick="onClickBackToMain"
                android:text="@string/cancelBtn_ap"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button14"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="4dp"
                android:onClick="onClickNextEmployeeRegLayout"
                android:text="@string/nextBtn"
                app:layout_constraintBottom_toTopOf="@+id/button11"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/errorLabel"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="483dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/button14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>