<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center|top"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="684dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <Button
            android:id="@+id/doctorAppointment"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:onClick="onClickDoctorAppointment"
            android:text="@string/makeAppointment" />

        <Button
            android:id="@+id/button2"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:text="@string/myAppointments" />

        <Button
            android:id="@+id/button3"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:text="@string/mySettings" />

        <Button
            android:id="@+id/button4"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:onClick="onClickBackToMain"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>