<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <EditText
            android:id="@+id/signInLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/sigIn_login"
            android:inputType="textPersonName"
            android:onClick="onClickSignInBtn" />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/signIn_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInOk"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:onClick="onClickUserAuth"
            android:layout_marginTop="35dp"
            android:text="@string/enter" />

        <Button
            android:id="@+id/signInCancel"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:onClick="onClickBackToMain"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>