<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="7dp"
                android:text="Я согласен на обработку моих персональных данных"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <Button
                android:id="@+id/button11"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="36dp"
                android:onClick="onClickBackToMain"
                android:text="Отмена"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button14"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="4dp"
                android:onClick="onClickConfirmReg"
                android:text="@string/submitBtn"
                app:layout_constraintBottom_toTopOf="@+id/button11"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/errorLabel"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="483dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/button14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="31dp"
                android:layout_height="34dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="2dp">

                    <EditText
                        android:id="@+id/surname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:height="30dp"
                        android:ems="10"
                        android:hint="@string/surnameLabelHint"
                        android:inputType="textPersonName"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:height="25dp"
                        android:ems="10"
                        android:hint="@string/nameLabelHint"
                        android:inputType="textPersonName"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/thirdname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:height="25dp"
                        android:ems="10"
                        android:hint="@string/thirdNameLabelHint"
                        android:inputType="textPersonName"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:height="25dp"
                        android:ems="10"
                        android:hint="@string/phoneNumberHint"
                        android:inputType="phone"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:height="25dp"
                        android:ems="10"
                        android:hint="@string/emailLabelHint"
                        android:inputType="textEmailAddress"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:height="25dp"
                        android:ems="10"
                        android:hint="@string/passwordLabelHint"
                        android:inputType="textPassword"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/password2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:height="25dp"
                        android:ems="10"
                        android:hint="@string/password2LabelHint"
                        android:inputType="textPassword"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>